2010-03-06  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* INSTALL config/makefile.mgw config/makefile.cyg:
	Consolidate the instructions for building using mgw and cygwin into
	their respective makefiles.

2010-03-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): Both curves in 'with filledcurves' must
	use the same y axis properties.
	Bug #2941257

2010-03-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/internal.c (eval_reset_after_error f_call) src/internal.h
	src/util.c (int_error) eval.h (STACK_DEPTH):
	Add a recursion depth limit for calls to a user-defined function.
	Bump the maximum depth from 100 to 250.
	Bug #2954383

2010-03-05  Christoph Junghans (ottxor)

	* src/Makefile.am:  Fix broken target "make clean"

2010-03-04  Thomas Sefzick <thse@users.sourceforge.net>

	* src/svg.trm:  Make sure to reset ENHsvg_string_state after each use.

2010-03-03  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm:  Remove requirement that the 'size' option must be the
	last option given.

2010-02-27  Ethan A Merritt  <merritt@u.washington.edu>

	* graph3d.c (check_for_variable_color) plot3d.c (get_3ddata)
	plot3d.c (plot3d_impulses plot3d_lines plot3d_points):
	The presence of variable color was being tracked by a shared variable,
	rgb_from_column, but it was not being updated in some circumstances.
	Get rid of the variable and test the plot header directly when needed.

	* term/emf.trm:  Tweak empirical corrections for character widths.
	Additional thin character -, really thin chars i,.:;|!

2010-02-24  Peter Juhasz

	* src/save.c:  The 'save' command was not correctly handling plot styles
	circles, image, or rgbimage.
	Bug #2958235

2010-02-24  Alexander Taschner  <tachna@users.sourceforge.net>

	* src/command.c src/win/wgraph.c term/win.trm:  Move declarations to
	conform with ANSI C.

2010-02-24  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cgm.trm (find_nearest_color):  When looking for RGB colors, check