@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.262 2010/02/07 23:18:14 sfeam Exp $
+dnl $Id: configure.in,v 1.263 2010/02/18 05:34:09 sfeam Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to
@@ -174,7 +174,7 @@ AC_CHECK_HEADERS(dirent.h errno.h float.h limits.h locale.h math.h stdlib.h \
   string.h time.h sys/time.h sys/types.h \
   sys/bsdtypes.h sys/ioctl.h sys/param.h sys/select.h sys/socket.h \
   sys/stat.h sys/systeminfo.h sys/timeb.h sys/utsname.h \
-  libc.h malloc.h poll.h sgtty.h termios.h values.h pwd.h
+  libc.h malloc.h poll.h sgtty.h termios.h values.h
 )
 
 AC_HEADER_STDBOOL
